--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,3 @@
-
 name: Docker Image CI for GHCR
 
 on:
@@ -34,6 +33,6 @@ jobs:
 
       - name: Build and push the image
         run: |
-          docker login --username hbahramian --password ${{secrets.ACCESS_TOKEN}} ghcr.io
-          docker build -t ghcr.io/hbahramian/lab6:latest --file Dockerfile .  
-          docker push ghcr.io/hbahramian/lab6:lates
+          docker login --username samhuser --password ${{secrets.ACCESS_TOKEN}} ghcr.io
+          docker build -t ghcr.io/samhuser/guitars:latest --file Dockerfile .  
+          docker push ghcr.io/samhuser/guitars:latest
